--- a/content/post/2024-08-27-how-you-should-keep-score-in-pickup-basketball/index.Rmd
+++ b/content/post/2024-08-27-how-you-should-keep-score-in-pickup-basketball/index.Rmd
@@ -181,7 +181,7 @@ table
 
 ## Taking action
 
-You might think that the expected values of different shots would naturally balance out. If you're playing by 1s and 2s with alternating possession (where I've said deep shots are more valuable) you would think players would defend long range shots more aggressively which would lead to the shooting percentage on those shots dropping relative to interior shots. In practice though, this modification does not happen as much as would be expected by fully rational players^[Also some adjustments may be difficult to make regardless of intention.]. Instead, many people anchor their play style to whatever brand of basketball they are accustomed and do not fully adjust to the scoring and possession system in place. Given these tendencies, *what should you do?*
+You might think that the expected values of different shots would naturally balance out. For example, if you're playing by 1s and 2s with alternating possession (where I've said deep shots are more valuable) you would think players would defend long range shots more aggressively which would lead to the shooting percentage on those shots dropping relative to interior shots. In practice though, this modification does not happen as much as would be expected by fully rational players^[Also some adjustments may be difficult to make regardless of intention.]. Instead, many people anchor their play style to whatever brand of basketball they are accustomed and do not fully adjust to the scoring and possession system in place. Given these tendencies, *what should you do?*
 
 1. Advocate for a balanced scoring system^[Being the ethical and upstanding individual you are, you should advocate for the most balanced system available. A more cynical person might say that you should try and skew the scoring system to whichever gives your team the greatest advantage... however I think it's more fun to just try and keep things balanced.]
 
@@ -189,7 +189,7 @@ This means if you're playing full court (with alternating possessions after scor
 
 2. Arbitrage
 
-In many cases you will not be able to influence the scoring system. Under these conditions other players not fully adapting to unbalanced values of interior or long range shots is an opportunity. For example, if the system advantages long range scoring, do your best to get your best shooter as many decent looks as possible and push your team to play good outside defense[^well-balanced-games].
+In many cases you will not be able to influence the scoring system. Under these conditions other players not fully adapting to unbalanced values of shots is an opportunity. For example, if the system advantages long range scoring, do your best to get your best shooter as many decent looks as possible and push your team to play good outside defense[^well-balanced-games].
 
 [^well-balanced-games]: Even under reasonably balanced rules you can still find opportunities where people don't play in-line with expected value. One example, is in 1s and 2s make-it-take-it some players will be overly concerned about long range shots (and under appreciate the value of retaining possession) and defend in a way that opens themselves up to drives and high percentage interior shots. This is particularly the case if playing with less than 10 players (e.g. 3 vs 3 or 4 vs 4) where interior play is already more open and the shooting percentage on interior shots likely goes up by more than it does for long range shots.
 
@@ -294,7 +294,7 @@ data_chart %>%
   coord_fixed()
 ```
 
-The greater range in color hue for make-it-take-it settings demonstrates how, as you deviate from balanced shooting percentage conditions, shot imbalance grows more quickly than when playing with alternating possession after scores. This is why the 45%; 30% standard shooting percentage points in the upper right and lower left charts, while being quite different in terms of distance from "perfect balance" are pretty similar in terms of proportion imbalanced. 
+The greater range in color hue for make-it-take-it settings demonstrates how, as you deviate from balanced shooting percentage conditions, shot imbalance grows more quickly than when playing with alternating possession after scores. This is why the "standard shooting conditions" points in the upper right and lower left charts are pretty similar in terms of proportion imbalanced while being pretty different in terms of shooting %s distance from "perfectly balanced". 
 
 Everything above the red "perfect balance" lines (or curves in the cases of make-it-take) can be interpreted as shooting percentages where long range shooting has an expected points advantage. Everything below them represents shooting percentages where interior shooting has an advantage. For example, in games where interior shooting percentages are still ~45% but long range shooting is a bit worse (e.g. percentages in the low 20s) 1s and 2s with alternating possession after a score can actually be more balanced than 2s and 3s. However you would be setting-up conditions for a lot of missed shots. 
 
@@ -304,11 +304,11 @@ Sometimes it's better to just play by all 1s.
 
 ## Appendix
 
-## But you don't play pickup basketball to infinity
+### But you don't play pickup basketball to infinity
 
-The solutions in [What if you’re playing make-it-take-it?] are with infinite series but in pickup basketball you typically play to some fixed value (e.g. 7, 11, 15, 16, 21, 25). Evaluating [Finite geometric series] would allow you to condition your expected value calculations on how many points (or actually scoring possessions) remain. However, the values for the finite geometric series would only substantively differ from our infinite series calculations as you get near to the end of the game at which point (and even before then probably) you should start thinking in terms of event outcomes rather than expected points. Event outcomes are a problem of probability rather than expected value and require a different type of analysis. In the future I may do a "Simulating pickup basketball outcomes" post^[E.g. 1s and 2s make-it-take to 11, you're down 9 - 7 with the ball... what are your chances of winning if you...]. However for my purposes now, infinite series work fine as an approximation for expected points while remaining easy to describe (as each statement of value does not need to be predicated on how many points remain in the game). From the [Summary] section on I stop saying "approximate expected points" and just say^[This allows me to put both "alternating" and "make-it-take-it" calculations on the same figures without having to clarify that the former is expected points and the latter approximate expected points.] "expected points."
+The solutions in [What if you're playing make-it-take-it?] are with infinite series but in pickup basketball you typically play to some fixed value (e.g. 7, 11, 15, 16, 21, 25). Evaluating [Finite geometric series] would allow you to condition your expected value calculations on how many points (or actually scoring possessions) remain. However, the values for the finite geometric series would only substantively differ from our infinite series calculations as you get near to the end of the game by which point you'd be better thinking in terms of event outcomes rather than expected points. Event outcomes are a problem of probability rather than expected value and require a different type of analysis. In the future I may do a "Simulating pickup basketball outcomes" post^[E.g. 1s and 2s make-it-take to 11, you're down 9 - 7 with the ball... what are your chances of winning if you...]. However for my purposes (identifying the rules that promote the most balanced games), infinite series work fine as an approximation for expected points while remaining easy to describe (as each statement of value does not need to be predicated on how many points remain in the game). From the [Summary] section on I stop saying "approximate expected points" and just say^[This allows me to put both "alternating" and "make-it-take-it" calculations on the same figures without having to clarify that the former is expected points and the latter approximate expected points.] "expected points."
 
-## Finite geometric series
+### Finite geometric series
 
 *...much of this section was written while thinking about the problem in the wrong way...*
 
