--- a/content/post/2024-08-27-how-you-should-keep-score-in-pickup-basketball/index.Rmd
+++ b/content/post/2024-08-27-how-you-should-keep-score-in-pickup-basketball/index.Rmd
@@ -14,7 +14,7 @@ thumbnail: /2024/08/27/how-you-should-keep-score-in-pickup-basketball/index_file
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, cache = TRUE)
 ```
 
-**TLDR:** *For full court pickup basketball you should play by 2s and 3s. Make-it-take-it by 1s and 2s is also fine. Otherwise, adapt your game according to the scoring and possession system in place.*
+**TLDR:** *For full court pickup basketball you should play by 2s and 3s. Make-it-take-it by 1s and 2s is also fine. Adapt your game according to the scoring and possession system in place.*
 
 Steph Curry is sometimes blamed for ruining pickup basketball:
 
@@ -28,7 +28,7 @@ Another idea is that Steph is less to blame for this phenomena than the incentiv
 
 I lean towards the incentives based perspective. This post will be a review of the "balance" of games under different scoring and possession systems. I'm defining "balanced" games as those where the expected points from interior and long range shots are similar to one another.
 
-To make this explicit, say the average team^[It's not that every player has to have a 30% long range shooting percentage and 45% interior shooting percentage. It could be that some of the players on the team are far worse at shooting 3s, but they just won't take those shots.] shooting percentage for interior shots is 45% and the average for long-range shots is 30% (for my examples the specific shooting percentages don't matter so much as that the ratio between *interior : long range* shooting stays close to *0.45 : 0.30*)^[This isn't completely true when considering make-it-take-it but as long as things don't depart too much from the shooting percentages I'm using, most of the takeaways stay the same.]. If you're playing 2s and 3s, the expected value of an interior shot is $2 \times 0.45 = 0.9$ and the expected value of a long range shot is $3 \times 0.3 = 0.9$ -- i.e. the expected value of both types of shots is equivalent (perfectly balanced). Given these shooting percentages (and ignoring offensive rebounds^[I'm also ignoring free throws because playing with these are exceptionally rare in pickup basketball.]) the expected value in 1s and 2s would be $1 \times 0.45 = 0.45$ for an interior shot and $2 \times 0.3 = 0.6$ from distance. In this scenario a long range shot comes with 33% more value (or 29% if using a symmetric measure^[[Article](https://patrickjuli.us/2016/01/27/how-i-wish-we-measured-percentage-change/) on symmetric measure for percentage difference.] of percent difference).
+To make this explicit, say the average team^[It's not that every player has to have a 30% long range shooting percentage and 45% interior shooting percentage. It could be that some of the players on the team are far worse at shooting 3s, but they just won't take those shots.] shooting percentage for interior shots is 45% and the average for long-range shots is 30% (for my examples the specific shooting percentages don't matter so much as that the ratio between *interior : long range* shooting stays close to *0.45 : 0.30*)^[This isn't completely true when considering make-it-take-it but as long as things don't depart too much from the shooting percentages I'm using, most of the takeaways stay the same.]. If you're playing 2s and 3s, the expected value of an interior shot is $2 \times 0.45 = 0.9$ and the expected value of a long range shot is $3 \times 0.3 = 0.9$ -- i.e. the expected value of both types of shots is equivalent (perfectly balanced). Given these shooting percentages (and ignoring offensive rebounds^[I'm also ignoring free throws because playing with these are exceptionally rare in pickup basketball.]) the expected value in 1s and 2s would be $1 \times 0.45 = 0.45$ for an interior shot and $2 \times 0.3 = 0.6$ from distance. In this scenario a long range shot comes with 33% more value (29% if using a symmetric measure^[[Article](https://patrickjuli.us/2016/01/27/how-i-wish-we-measured-percentage-change/) on symmetric measure for percentage difference.] of percent difference).
 
 The 2s and 3s scoring system is the minority position in most pickup games^[Article surveying the most common [rules of pickup](https://www.sbnation.com/lookit/2015/4/7/8353509/what-are-the-rules-of-pick-up-basketball-survey).] but is somewhat more popular among analytics oriented players and common practice among the converted^[and finds sympathy among those without a jump shot]. Hence the conventional sports nerd wisdom is to advocate for playing by 2s and 3s (see [How to Fix Pickup Basketball...](https://grantland.com/the-triangle/video-how-to-fix-pickup-basketball-with-analytics/)). However that analysis doesn't take into account possession. 
 
@@ -38,11 +38,11 @@ The 2s and 3s scoring system is the minority position in most pickup games^[Arti
 
 Calculating the expected points for a shot is no longer just: 
 
-$\text{(number of points)} \times \text{(shooting percentage)}$  
+$\text{(points)} \times \text{(shooting %)}$  
 
 but:
 
-$\left(\text{number of points}\right) \times \left(\text{shooting percentage}\right) \\+ \left(\text{chance last shot was made}\right) \times \left(\text{number of points}\right) \times \left(\text{shooting percentage}\right) \\+ \left(\text{chance last two shots were made}\right) \times \left(\text{number of points}\right) \times \left(\text{shooting percentage}\right) \\+ \ldots \left(\text{and so on and so on}\right) \ldots$
+$\left(\text{points}\right) \times \left(\text{shooting %}\right) \\+ \left(\text{chance last shot was made}\right) \times \left(\text{points}\right) \times \left(\text{shooting %}\right) \\+ \left(\text{chance last two shots were made}\right) \times \left(\text{points}\right) \times \left(\text{shooting %}\right) \\+ \ldots \left(\text{and so on and so on}\right) \ldots$
 
 If we consider the expected points of an interior shot (when playing 1s and 2s) the series can be approximated as:
 
@@ -56,7 +56,7 @@ $$
 \frac{\text{(start value)}}{(1 - \text{rate})}
 $$
 
-We can use this to approximate the expected points for a shot attempt (see [But you don't play pickup basketball to infinity] for why this is just an approximation). If we plug in our values for a 1 pointer with 45% chance of being made:
+We can use this to approximate the expected points for a shot attempt when playing make-it-take-it (see [But you don't play pickup basketball to infinity] for why this is just an approximation). If we plug in our values for a 1 pointer with 45% chance of being made:
 
 $$
 \frac{(0.45 \times 1)}{(1 - 0.45)} = 0.82
@@ -68,9 +68,7 @@ $$
 \frac{(0.30 \times 2)}{(1 - 0.30)} = 0.86
 $$
 
-This shows a less than 5% difference in approximate expected points if taking an interior or long range shot when playing make-it-take^[Maybe a slight edge for long range shots but pretty close (i.e. balanced).]. This is pretty balanced, which is good news as 1s and 2s make-it-take-it is the norm for half court pickup basketball. Compare this relative balance to the expected values when playing make-it-take by 2s and 3s.
-
-Approximate expected points for a 2 pointer in make-it-take-it:
+This shows a less than 5% difference in approximate expected points if taking an interior or long range shot when playing make-it-take^[Maybe a slight edge for long range shots but pretty close (i.e. balanced).]. This is pretty balanced, which is good news because 1s and 2s make-it-take-it is the norm for half court pickup basketball. Let's compare this relative balance to the relationship between the expected values when playing make-it-take by 2s and 3s. Approximate expected points for a 2 pointer in make-it-take-it:
 
 $$
 \frac{(0.45 \times 2)}{(1 - 0.45)} = 1.64
@@ -82,11 +80,11 @@ $$
 \frac{(0.3 \times 3)}{(1 - 0.3)} = 1.29
 $$
 
-Under these conditions, an interior shot has almost 27% greater expected value than taking a long range shot (24% symmetric percent difference). In this case 2s and 3s is almost as imbalanced for interior shots as the 33% advantage we saw for distance shots when playing 1s and 2s with alternating possession. It's good then that 2s and 3s make-it-take-it is somewhat rare.
+Under these conditions, an interior shot has almost 27% greater expected value than taking a long range shot (24% symmetric percent difference). In this case 2s and 3s is almost as imbalanced for interior shots as the 33% advantage we saw for distance shooting when playing 1s and 2s with alternating possession. So if you're playing make-it-take-it, you actually shouldn't do scoring by 2s and 3s^[It's good then that 2s and 3s make-it-take-it is somewhat rare.].
 
 ## Summary
 
-The two conditions that lead to similar in-game expected values for interior and long range shots are make-it-take-it 1s and 2s as well as 2s and 3s with alternating possession after scores^[The other play formats lead to imbalances that favor either long range or interior shooting.]. 
+The two game conditions that promote similar expected values for interior and long range shots are 2s and 3s with alternating possession after scores as well as make-it-take-it by 1s and 2s^[The other play formats lead to imbalances that favor either long range or interior shooting.]. 
 
 ```{r}
 # Load the gt package
@@ -181,21 +179,21 @@ table
 
 ## Taking action
 
-You might think that the expected values of different shots would naturally balance out. For example, if you're playing by 1s and 2s with alternating possession (where I've said deep shots are more valuable) you would think players would defend long range shots more aggressively which would lead to the shooting percentage on those shots dropping relative to interior shots. In practice though, this modification does not happen as much as would be expected by fully rational players^[Also some adjustments may be difficult to make regardless of intention.]. Instead, many people anchor their play style to whatever brand of basketball they are accustomed and do not fully adjust to the scoring and possession system in place. Given these tendencies, *what should you do?*
+You might think that the expected values of different shots would naturally balance out. For example, if you're playing by 1s and 2s with alternating possession (where deep shots are more valuable) players could defend long range shots more aggressively which would lead to the shooting percentage on those shots dropping relative to interior shots. In practice though, this modification does not happen as much as would be expected by fully rational players^[Also some adjustments may be difficult to make regardless of intention.]. Instead, many people anchor their play style to whatever brand of basketball they are accustomed and do not fully adjust to the scoring and possession system in place. Given these tendencies, *what should you do?*
 
 1. Advocate for a balanced scoring system^[Being the ethical and upstanding individual you are, you should advocate for the most balanced system available. A more cynical person might say that you should try and skew the scoring system to whichever gives your team the greatest advantage... however I think it's more fun to just try and keep things balanced.]
 
-This means if you're playing full court (with alternating possessions after scores), push for playing by 2s and 3s to 21 (rather than the more common 1s and 2s to 15). If you're playing half court, you don't need to do anything as games are typically played make-it-take by 1s and 2s, which has mostly fine incentives^[You *could* push for 2s and 3s with alternating possession though which is a little more balanced and has the advantage of being more robust to variations in shooting percentage which I touch-on in [Other considerations].]. 
+This means if you're playing full court (with alternating possessions after scores), push for playing by 2s and 3s to 21 (rather than the more common 1s and 2s to 15). If you're playing half court, you don't need to do anything as games are typically played make-it-take by 1s and 2s, which has mostly fine incentives^[You *could* push for 2s and 3s with alternating possession though which is a little more balanced and has the advantage of being more robust to variations in shooting percentage which I touch-on in a footnote in [Other considerations].]. 
 
 2. Arbitrage
 
-In many cases you will not be able to influence the scoring system. Under these conditions other players not fully adapting to unbalanced values of shots is an opportunity. For example, if the system advantages long range scoring, do your best to get your best shooter as many decent looks as possible and push your team to play good outside defense[^well-balanced-games].
+In many cases you will not be able to influence the scoring system. Other players not fully adapting to unbalanced values of shots is an opportunity. If the system advantages long range scoring, get your best shooter as many decent looks as possible and push your team to play strong exterior defense[^well-balanced-games].
 
 [^well-balanced-games]: Even under reasonably balanced rules you can still find opportunities where people don't play in-line with expected value. One example, is in 1s and 2s make-it-take-it some players will be overly concerned about long range shots (and under appreciate the value of retaining possession) and defend in a way that opens themselves up to drives and high percentage interior shots. This is particularly the case if playing with less than 10 players (e.g. 3 vs 3 or 4 vs 4) where interior play is already more open and the shooting percentage on interior shots likely goes up by more than it does for long range shots.
 
 ## Other considerations
 
-The conclusion that "1s and 2s make-it-take-it" and "2s and 3s alternating possession" make for the most balanced games depends on my guesses for shooting percentages[^personal-problems]. 45% and 30% for interior and long range are reasonable estimates for competitive pickup games but may not apply universally[^ratios-relations]. 
+The conclusion that "1s and 2s make-it-take-it" and "2s and 3s alternating possession" make for the most balanced games depends on my guesses for standard shooting percentages[^personal-problems]. 45% : 30% for interior and long range shots are reasonable estimates for competitive pickup games but may not apply universally[^ratios-relations]. 
 
 [^personal-problems]: There's also the possibility that much of this post is rationalizing my own frustrations at growing up without a decent jump shot and having to always play 1s and 2s.
 
@@ -294,9 +292,11 @@ data_chart %>%
   coord_fixed()
 ```
 
-The greater range in color hue for make-it-take-it settings demonstrates how, as you deviate from balanced shooting percentage conditions, shot imbalance grows more quickly than when playing with alternating possession after scores. This is why the "standard shooting conditions" points in the upper right and lower left charts are pretty similar in terms of proportion imbalanced while being pretty different in terms of shooting %s distance from "perfectly balanced". 
+Everything above the red "perfect balance" lines (or curves in the cases of make-it-take) can be interpreted as shooting percentages where long range shooting has an expected points advantage. Everything below them represents shooting percentages where interior shooting has an advantage[^conditions]. For example, in games where interior shooting percentages are still ~45% but long range shooting is a bit worse (e.g. percentages in the low 20s) 1s and 2s with alternating possession after a score can actually be more balanced than 2s and 3s. However you would be setting-up conditions for a lot of missed shots. 
 
-Everything above the red "perfect balance" lines (or curves in the cases of make-it-take) can be interpreted as shooting percentages where long range shooting has an expected points advantage. Everything below them represents shooting percentages where interior shooting has an advantage. For example, in games where interior shooting percentages are still ~45% but long range shooting is a bit worse (e.g. percentages in the low 20s) 1s and 2s with alternating possession after a score can actually be more balanced than 2s and 3s. However you would be setting-up conditions for a lot of missed shots. 
+[^conditions]: You can see where the standard shooting percentages we investigate fall in these conditions. "2&3; alternating" is directly on the "perfect balance" line, "1&2; make-it-take-it" is close to it's perfect balance curve. Whereas "1&2; alternating" is above it's line, indicating an advantage for long range shooting and "2&3; make-it-take-it" is below it's line indicating an advantage for interior shooting. 
+
+    The greater range in color hue for make-it-take-it settings demonstrates how, as you deviate from balanced shooting percentage conditions, shot expected value imbalance grows more quickly than when playing with alternating possession. This is why the points on the graph for "standard shooting percentages" in the upper right and lower left charts are noticeably different distances from the "perfectly balanced" shooting percentage for that condition but similar in terms of proportion imbalanced. 
 
 <img src="https://media0.giphy.com/media/eRaZhg8XZ3FoQ/giphy.gif">
 
@@ -306,11 +306,11 @@ Sometimes it's better to just play by all 1s.
 
 ### But you don't play pickup basketball to infinity
 
-The solutions in [What if you're playing make-it-take-it?] are with infinite series but in pickup basketball you typically play to some fixed value (e.g. 7, 11, 15, 16, 21, 25). Evaluating [Finite geometric series] would allow you to condition your expected value calculations on how many points (or actually scoring possessions) remain. However, the values for the finite geometric series would only substantively differ from our infinite series calculations as you get near to the end of the game by which point you'd be better thinking in terms of event outcomes rather than expected points. Event outcomes are a problem of probability rather than expected value and require a different type of analysis. In the future I may do a "Simulating pickup basketball outcomes" post^[E.g. 1s and 2s make-it-take to 11, you're down 9 - 7 with the ball... what are your chances of winning if you...]. However for my purposes (identifying the rules that promote the most balanced games), infinite series work fine as an approximation for expected points while remaining easy to describe (as each statement of value does not need to be predicated on how many points remain in the game). From the [Summary] section on I stop saying "approximate expected points" and just say^[This allows me to put both "alternating" and "make-it-take-it" calculations on the same figures without having to clarify that the former is expected points and the latter approximate expected points.] "expected points."
+The solutions in [What if you're playing make-it-take-it?] are with infinite series but in pickup basketball you typically play to some fixed value (e.g. 7, 11, 15, 16, 21, 25). Evaluating [Finite geometric series] would allow you to condition your expected value calculations on how many points (or actually scoring possessions) remain. However, the values for the finite geometric series would only substantively differ from our infinite series calculations as you get near to the end of the game. By this point you'd be better thinking in terms of event outcomes rather than expected points. Event outcomes are a problem of probability rather than expected value and require a different type of analysis. In the future I may do a "Simulating pickup basketball outcomes" post^[E.g. 1s and 2s make-it-take to 11, you're down 9 - 7 with the ball... what are your chances of winning if you...]. However for my purposes in this post (identifying the rules that promote the most balanced games), infinite series work fine as an approximation for expected points. The calculations are also easy to describe as each statement of value does not need to be predicated on how many points remain in the game. From the [Summary] section on I stop saying "approximate expected points" and just say^[This allows me to put both "alternating" and "make-it-take-it" calculations on the same figures without having to clarify that the former is expected points and the latter approximate expected points.] "expected points."
 
 ### Finite geometric series
 
-*...much of this section was written while thinking about the problem in the wrong way...*
+*...much of this section has limited relevance and was written while initially thinking about the problem in the wrong way...*
 
 Calculating the finite geometric series allows us to consider how many points (/scoring rounds) are left in the game. Equation for calculating the value of a finite geometric series:
 
@@ -318,9 +318,9 @@ $$
 \frac{\text{(start value)} \cdot (1 - \text{rate}^n)}{(1 - \text{rate})}
 $$
 
-In our case, *n* is the number of remaining scoring possessions. However the number of remaining scoring possessions will depend on whether you're shooting interior or long-range shots. Long range shots are worth more points so there would be fewer scoring possessions until the end of the game. For example, if you're playing by 1s and 2s there will be ~half as many scoring possessions remaining if you're sinking long-range compared to interior shots^[In the curves I'm ignoring that some of these point values are impossible given the scoring systems.]. Taking this into account, let's look at the expected value of each shot (still using our 45% and 30% shooting percentages).
+In our case, *n* is the number of remaining scoring possessions. However the number of remaining scoring possessions will depend on whether you're shooting interior or long-range shots. Long range shots are worth more points so there would be fewer scoring possessions until the end of the game. For example, if you're playing by 1s and 2s there will be ~half as many scoring possessions remaining if you're sinking long-range compared to interior shots. Taking this into account, let's look at the expected value of each shot (still using our 45% and 30% shooting percentages).
 
-The usefulness of looking at these charts is limited for the reasons described in [But you don't play pickup basketball to infinity] (namely that you should think in terms of event outcomes, particularly near the end of the game). Also I've included point values in the charts that are impossible and calculations at points that are nonsensical. The purpose of the charts are mainly to show the pretty quick rate at which the expected values converge -- suggesting that, for most of the game, infinite series are a decent metric to use when considering shot selections if playing make-it-take-it. 
+The usefulness of looking at these charts is limited for the reasons described in [But you don't play pickup basketball to infinity] (namely that you should think in terms of event outcomes, particularly near the end of the game). I've also included some point values in the charts that are nonsensical for their scoring system. The purpose of the charts are mainly just to show the pretty quick rate at which the expected values converge -- suggesting that, for most of the game, infinite series are a decent metric to use when considering relative expected value by shot selection if playing make-it-take-it. 
 
 ```{r}
 library(dplyr)
@@ -391,8 +391,6 @@ data_2s3s_finite %>%
   ) +
   guides(color = guide_legend(title = NULL))
 ```
-
-We again see a pretty similar story as to what we found when evaluating the infinite series: in 2s and 3s make-it-take-it there's a decent imbalance favoring interior shots. This advantage exists (pretty much) no matter how many points remain.
 
 ### Scoring system in pickup basketball
 
